# CompactPy

./: .gitignore  LICENSE  README.md  benchmark.py  demo_step1.py  demo_step2.py  demo_step3.py  demo_step5.py  demo_step6.py  pyproject.toml  run_compactpy_pipeline.py  setup.py
compactpy/: __init__.py  memory.py  retrieval.py  scoring.py  token_utils.py
compactpy/compressors/: __init__.py  attention.py  dedup.py  semantic.py
compactpy/core/: chunk.py
compactpy/graph_memory/: __init__.py  algorithms.py  graph.py  linking.py  parser.py
compactpy/memory/: __init__.py
compactpy/ml/: __init__.py  clustering.py  ranker.py
