[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compactpy"
version = "1.0.0"
authors = [
    { name = "Priyankar Majumdar" }
]
description = "An intelligent, hierarchical context compression framework for LLM memory systems."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.0",
    "numpy>=1.26.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["compactpy*"]

[tool.setuptools]
include-package-data = true